--- a/index.html
+++ b/index.html
@@ -104,11 +104,14 @@
             <header>
               <span class="date">No code app development</span>
               <h2>
-                <a href="#">Gombe Habba</a>
+                <a
+                  href="https://goldenrod-copper-4e2.notion.site/Gombe-Habba-0fcb19e814df42efada2c65e85d8e082"
+                  >Gombe Habba</a
+                >
               </h2>
             </header>
             <a
-              href="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/60cad1e7-de45-44b7-aa62-6579b338188e/AbhiramJois-Portfolio.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20220514%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20220514T092644Z&X-Amz-Expires=86400&X-Amz-Signature=4c2ffa07df5604a854e2561aecd4585efb684cb206a3e9fcde31fe0cd685973b&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22AbhiramJois-Portfolio.pdf%22&x-id=GetObject"
+              href="https://goldenrod-copper-4e2.notion.site/Gombe-Habba-0fcb19e814df42efada2c65e85d8e082"
               class="image fit"
               ><img src="images/cvr1.0.jpg" alt=""
             /></a>
@@ -146,10 +149,15 @@
             <header>
               <span class="date">Experience design</span>
               <h2>
-                <a href="#">Thatte Thumba Kathegalu</a>
+                <a
+                  href="https://goldenrod-copper-4e2.notion.site/Thatte-Thumba-Kathegalu-9ff76cf7dcbe4149bb2801ef0d689a97"
+                  >Thatte Thumba Kathegalu</a
+                >
               </h2>
             </header>
-            <a href="#" class="image fit"
+            <a
+              href="https://goldenrod-copper-4e2.notion.site/Thatte-Thumba-Kathegalu-9ff76cf7dcbe4149bb2801ef0d689a97"
+              class="image fit"
               ><img src="images/cvr3.jpg" alt=""
             /></a>
             <p>
