--- a/index.html
+++ b/index.html
@@ -129,10 +129,15 @@
             <header>
               <span class="date">Touchless Interface</span>
               <h2>
-                <a href="#">YogharPe</a>
+                <a
+                  href="https://goldenrod-copper-4e2.notion.site/YogharPe-f75521903137401894ce5b8f300c485a"
+                  >YogharPe</a
+                >
               </h2>
             </header>
-            <a href="#" class="image fit"
+            <a
+              href="https://goldenrod-copper-4e2.notion.site/YogharPe-f75521903137401894ce5b8f300c485a"
+              class="image fit"
               ><img src="images/cvr2.jpg" alt=""
             /></a>
             <p>
@@ -149,14 +154,13 @@
             <header>
               <span class="date">Experience design</span>
               <h2>
-                <a
-                  href="https://goldenrod-copper-4e2.notion.site/Thatte-Thumba-Kathegalu-9ff76cf7dcbe4149bb2801ef0d689a97"
+                <a href="https://www.youtube.com/watch?v=NZ2zLO5IgQk"
                   >Thatte Thumba Kathegalu</a
                 >
               </h2>
             </header>
             <a
-              href="https://goldenrod-copper-4e2.notion.site/Thatte-Thumba-Kathegalu-9ff76cf7dcbe4149bb2801ef0d689a97"
+              href="https://www.youtube.com/watch?v=NZ2zLO5IgQk"
               class="image fit"
               ><img src="images/cvr3.jpg" alt=""
             /></a>
@@ -175,10 +179,15 @@
             <header>
               <span class="date">Interactive education</span>
               <h2>
-                <a href="#">Algori</a>
+                <a
+                  href="https://goldenrod-copper-4e2.notion.site/Algori-401c430f452a4120b3229df2df675305"
+                  >Algori</a
+                >
               </h2>
             </header>
-            <a href="#" class="image fit"
+            <a
+              href="https://goldenrod-copper-4e2.notion.site/Algori-401c430f452a4120b3229df2df675305"
+              class="image fit"
               ><img src="images/cvr4.jpg" alt=""
             /></a>
             <p>
