--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <nav id="nav">
         <ul class="links">
           <li class="active"><a href="index.html">Projects</a></li>
-          <li><a href="generic.html">Gallery</a></li>
+          <li><a href="generic.html">Online Games</a></li>
           <!-- <li><a href="elements.html">Elements Reference</a></li> -->
         </ul>
         <ul class="icons">
