--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <ul class="links">
           <li class="active"><a href="index.html">Projects</a></li>
           <li><a href="generic.html">Online Games</a></li>
-          <!-- <li><a href="elements.html">Elements Reference</a></li> -->
+          <li><a href="elements.html">Gallery</a></li>
         </ul>
         <ul class="icons">
           <li><span>abhijoisram@gmail.com</span></li>
