--- a/generic.html
+++ b/generic.html
@@ -30,6 +30,7 @@
         <ul class="links">
           <li><a href="index.html">Projects</a></li>
           <li class="active"><a href="generic.html">Online Games</a></li>
+          <li><a href="elements.html">Gallery</a></li>
           <!-- <li><a href="elements.html">Elements Reference</a></li> -->
         </ul>
         <ul class="icons">
